--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.0.1",
         "admin-lte": "^4.0.0-rc4"
     }
 }
