--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laracasts/flash": "^3.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "spatie/laravel-html": "^3.12",
         "spatie/laravel-permission": "^6.21"
     },
     "require-dev": {
